fix (one-of-schema): Changed promise to use shim allSettled for more compatibility

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime-corejs3": "^7.6.3",
-    "core-js": "3"
+    "core-js": "3",
+    "promise.allsettled": "^1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
