✨ Feat: Adds emoji-cz support
Adds emoji-cz with emoji based conventional-changelog support. This makes it more obvious what is
changing from release to release.

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,5 +3,8 @@ update_configs:
   - package_manager: javascript
     directory: /
     update_schedule: live
+    commit_message:
+      prefix: ⬆️ Upgrade
+      include_scope: false
     default_labels:
       - dependabot
