--- a/package.json
+++ b/package.json
@@ -4,44 +4,6 @@
   "description": "a(ny)yup. Useful Yup helpers and functions. Synchronous and Async.",
   "homepage": "https://github.com/aibexhq/ayup",
   "author": "Aibex <oss@aibex-corp.com>",
-  "license": "Apache-2.0",
-  "engines": {
-    "node": ">= 10.0.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "keywords": [
-    "yup",
-    "validation",
-    "helpers",
-    "plugin",
-    "joi"
-  ],
-  "main": "./cjs/index.js",
-  "module": "./esm/index.js",
-  "browser": "./cjs/index.js",
-  "browserslist": "last 2 versions, not dead, > 0.2%",
-  "files": [
-    "cjs/",
-    "esm/"
-  ],
-  "scripts": {
-    "build": "rm -rf cjs/* && babel esm --out-dir cjs",
-    "bt": "yarn build && yarn test",
-    "watch": "nodemon -L --ignore cjs/ --exec yarn bt",
-    "test": "yarn build && CI=1 ava",
-    "ci": "pretty-quick --check && yarn build && CI=1 ava",
-    "release": "release-it",
-    "____________________": "echo \"The following sub-commands are used to serve the main commands above\"",
-    "format:prettier": "pretty-quick --staged",
-    "husky:precommit": "concurrently \"npm:format:*\" && yarn build && git add -A && CI=1 ava"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run husky:precommit"
-    }
-  },
   "licenses": [
     {
       "type": "Apache-2.0",
@@ -51,13 +13,14 @@
   "bugs": {
     "url": "https://github.com/aibexhq/ayup/issues"
   },
-  "ava": {
-    "require": [
-      "esm"
-    ]
+  "engines": {
+    "node": ">= 10.0.0"
   },
+  "main": "./cjs/index.js",
+  "module": "./esm/index.js",
+  "browser": "./cjs/index.js",
   "peerDependencies": {
-    "yup": "^0.27.0"
+    "yup": ">0.27.0 || ^0.28.0"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
@@ -72,7 +35,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "7.6.2",
     "ava": "^2.4.0",
+    "commitizen": "^4.0.3",
     "concurrently": "^5.0.0",
+    "emoji-cz": "^0.3.0",
     "esm": "^3.2.25",
     "husky": "^3.0.9",
     "nodemon": "^1.19.3",
@@ -80,5 +45,43 @@
     "pretty-quick": "^2.0.0",
     "release-it": "^12.4.3",
     "yup": "^0.27.0"
+  },
+  "keywords": [
+    "yup",
+    "validation",
+    "helpers",
+    "plugin",
+    "joi"
+  ],
+  "browserslist": "last 2 versions, not dead, > 0.2%",
+  "files": [
+    "cjs/",
+    "esm/"
+  ],
+  "scripts": {
+    "build": "rm -rf cjs/* && babel esm --out-dir cjs",
+    "bt": "yarn build && yarn test",
+    "watch": "nodemon -L --ignore cjs/ --exec yarn bt",
+    "test": "yarn build && CI=1 ava",
+    "ci": "pretty-quick --check && yarn build && CI=1 ava",
+    "release": "release-it",
+    "____________________": "echo \"The following sub-commands are used to serve the main commands above\"",
+    "format:prettier": "pretty-quick --staged",
+    "husky:precommit": "concurrently \"npm:format:*\" && yarn build && git add -A && CI=1 ava",
+    "commit:cz": "exec < /dev/tty && git-cz --hook || true"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run husky:precommit",
+      "prepare-commit-msg": "yarn run commit:cz"
+    }
+  },
+  "ava": {
+    "require": [
+      "esm"
+    ]
   }
 }
