🐛 Fix: Adds fixes to patch list in changelog

--- a/.czrc
+++ b/.czrc
@@ -5,7 +5,9 @@
       "Feat": {
         "release": "minor"
       },
-      "Fix": {},
+      "Fix": {
+        "release": "patch"
+      },
       "Docs": {
         "emoji": "📝",
         "description": "Documentation only changes",
