--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "description": "a(ny)yup. Useful Yup helpers and functions. Synchronous and Async.",
   "homepage": "https://github.com/aibexhq/ayup",
+  "repository": "https://github.com/aibexhq/ayup",
   "author": "Aibex <oss@aibex-corp.com>",
   "licenses": [
     {
@@ -25,14 +26,14 @@
   ],
   "scripts": {
     "build": "rm -rf cjs/* && babel esm --out-dir cjs",
-    "bt": "yarn build && yarn test",
-    "watch": "nodemon -L --ignore cjs/ --exec yarn bt",
-    "test": "yarn build && CI=1 ava",
-    "ci": "pretty-quick --check && yarn build && CI=1 ava",
+    "bt": "npm run build && npm run test",
+    "watch": "nodemon -L --ignore cjs/ --exec npm run bt",
+    "test": "npm run build && CI=1 ava",
+    "ci": "pretty-quick --check && npm run build && CI=1 ava",
     "release": "semantic-release",
     "____________________": "echo \"The following sub-commands are used to serve the main commands above\"",
     "format:prettier": "pretty-quick --staged",
-    "husky:precommit": "concurrently \"npm:format:*\" && yarn build && git add -A && CI=1 ava",
+    "husky:precommit": "concurrently \"npm:format:*\" && npm run build && git add -A && CI=1 ava",
     "commit:cz": "exec < /dev/tty && git-cz --hook || true"
   },
   "peerDependencies": {
@@ -77,8 +78,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run husky:precommit",
-      "prepare-commit-msg": "if [ -t 1 ] ; then yarn run commit:cz; fi"
+      "pre-commit": "npm run husky:precommit",
+      "prepare-commit-msg": "if [ -t 1 ] ; then npm run commit:cz; fi"
     }
   },
   "ava": {
