--- a/.czrc
+++ b/.czrc
@@ -1,56 +1,114 @@
 {
-  "path": "emoji-cz",
-  "emoji-cz": {
-    "types": {
-      "Feat": {
-        "release": "minor"
-      },
-      "Fix": {
-        "release": "patch"
-      },
-      "Docs": {
-        "emoji": "📝",
-        "description": "Documentation only changes",
-        "release": "patch"
-      },
-      "Style": {
-        "release": "patch"
-      },
-      "Refactor": {
-        "emoji": "♻️ ",
-        "description": "A code change that neither fixes a bug nor adds a feature",
-        "release": "patch"
-      },
-      "Perf": {
-        "emoji": "⚡️",
-        "description": "A code change that strictly improves performance",
-        "release": "minor"
-      },
-      "Test": {
-        "emoji": "✅",
-        "description": "Adding, correcting, or fixing tests",
-        "release": "patch"
-      },
-      "Upgrade": {
-        "emoji": "⬆️ ",
-        "description": "Upgrading dependencies",
-        "release": "patch"
-      },
-      "Downgrade": {
-        "emoji": "⬇️ ",
-        "description": "Downgrading dependencies",
-        "release": "patch"
-      },
-      "Pin": {
-        "emoji": "📌",
-        "description": "Pin a dependency to a specific version",
-        "release": "patch"
-      },
-      "Chore": {
-        "emoji": "❓",
-        "description": "Other changes that don't modify src or test files",
-        "release": false
-      }
+  "path": "cz-emoji",
+  "config": {
+    "cz-emoji": {
+      "skipQuestions": [
+        "scope"
+      ],
+      "types": [
+        {
+          "emoji": "✨",
+          "code": "✨ Feat:",
+          "description": "A new feature or functionality",
+          "name": "Feat",
+          "changelog": {
+            "section": "✨ Features"
+          },
+          "release": "minor"
+        },
+        {
+          "emoji": "🐛",
+          "code": "🐛 Fix:",
+          "description": "Fixing code",
+          "name": "Fix",
+          "changelog": {
+            "section": "🐛 Bug Fixes"
+          },
+          "release": "patch"
+        },
+        {
+          "emoji": "🚑",
+          "code": "🚑 Hotfix:",
+          "description": "Bypassing some safety, this needs to go straight to production!",
+          "name": "Hotfix",
+          "changelog": {
+            "section": "🚑 Critical Fixes"
+          },
+          "release": "patch"
+        },
+        {
+          "emoji": "📝",
+          "code": "📝 Docs:",
+          "description": "Documentation only changes",
+          "name": "Docs"
+        },
+        {
+          "emoji": "🎨",
+          "code": "🎨 Style:",
+          "description": "Improving the style/structure of the code",
+          "name": "Style"
+        },
+        {
+          "emoji": "♻️",
+          "code": "♻️ Refactor:",
+          "description": "A code change that does not alter public facing APIs",
+          "name": "Refactor"
+        },
+        {
+          "emoji": "⚡️",
+          "code": "⚡️ Perf:",
+          "description": "Improves Performance",
+          "name": "Perf"
+        },
+        {
+          "emoji": "✅",
+          "code": "✅ Test:",
+          "description": "Adds, Removes, or Fixes something related to tests",
+          "name": "Test"
+        },
+        {
+          "emoji": "⬆️",
+          "code": "⬆️ Upgrade:",
+          "description": "Upgrades dependencies",
+          "name": "Upgrade",
+          "changelog": {
+            "section": "⬆️ Dependency Changes"
+          },
+          "release": "patch"
+        },
+        {
+          "emoji": "⬇️",
+          "code": "⬇️ Downgrade:",
+          "description": "Downgrades or Removes dependencies",
+          "name": "Downgrade",
+          "changelog": {
+            "section": "⬆️ Dependency Changes"
+          },
+          "release": "patch"
+        },
+        {
+          "emoji": "📌",
+          "code": "📌 Pin:",
+          "description": "Pin a dependency to a specific version",
+          "name": "Pin",
+          "changelog": {
+            "section": "⬆️ Dependency Changes"
+          },
+          "release": "patch"
+        },
+        {
+          "emoji": "🧹",
+          "code": "🧹 Chore:",
+          "description": "Misc changes, often by automated systems",
+          "name": "Chore"
+        },
+        {
+          "emoji": "🚧",
+          "code": "🚧 WIP:",
+          "description": "Work in Progress (rebase these out!)",
+          "name": "WIP"
+        }
+      ]
     }
   }
 }
