--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@aibex/ayup",
   "version": "0.1.3",
   "description": "a(ny)yup. Useful Yup helpers and functions. Synchronous and Async.",
-  "homepage": "https://github.com/aibexhq/ayup",
-  "repository": "https://github.com/aibexhq/ayup",
+  "homepage": "https://github.com/aibex/ayup#readme",
+  "repository": "https://github.com/aibex/ayup",
   "author": "Aibex <oss@aibex-corp.com>",
   "license": "Apache-2.0",
   "bugs": {
@@ -38,6 +38,7 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/runtime-corejs3": "^7.7.7",
     "core-js": "3.6.4",
+    "cz-emoji": "^1.2.1",
     "promise.allsettled": "^1.0.2"
   },
   "devDependencies": {
@@ -50,7 +51,6 @@
     "commitizen": "^4.0.3",
     "concurrently": "^5.0.2",
     "conventional-changelog-conventionalcommits": "^4.2.3",
-    "emoji-cz": "^0.3.0",
     "esm": "^3.2.25",
     "husky": "^4.2.1",
     "nodemon": "^2.0.2",
